Rename repo references to truth-seeking-pattern-matching

--- a/paper.tex
+++ b/paper.tex
@@ -11,8 +11,8 @@
 
 \begin{document}
 
-\title{High-Confidence Pattern Recognition via Physically-Constrained Computing:\\
-Memristive Crossbar Arrays for Safety-Critical Systems}
+\title{Hebbian Learning Achieves Superior Robustness Through Natural Margin Maximization:\\
+A Comparative Study on Autonomous Driving Data}
 
 \author{
 \IEEEauthorblockN{Yahya Akbay}
@@ -269,7 +269,7 @@ These findings have immediate implications for safety-critical AI deployment. In
 
 All code, data, and experiment configurations are available at:
 
-\texttt{https://github.com/or4k2l/physical-pattern-matching}
+\texttt{https://github.com/or4k2l/truth-seeking-pattern-matching}
 
 \section*{Acknowledgments}
 
